Bug 85860; changing assertion to warning because the other change for this bug brings a new window to the foreground sooner and the assertion is annoying; r=danm, sr=jag